@@ -832,18 +832,3 @@
   [generator]
   (fn [& args]
     (idempotent-fixture (apply generator args))))
-
-(defonce singleton-has-run? (atom #{}))
-
-(defn singleton-fixture
-  "Takes a fixture and makes it into a singleton fixture.  A singleton fixture
-  is run only once per JVM process."
-  {:added "0.1.0"}
-  [fx]
-  (fn [f]
-    (let [run? (not (@singleton-has-run? fx))]
-      (try
-        (if run?
-          (do (swap! singleton-has-run? conj fx)
-              (fx f))
-          (f))))))
